# c-homework7

./: CMakeLists.txt  main.cpp
.github/workflows/: release.yml
